--- a/timetracking/package.json
+++ b/timetracking/package.json
@@ -54,14 +54,17 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.21.2",
+    "moment": "^2.29.1",
     "mqtt": "^4.2.8",
     "paho-mqtt": "^1.1.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
+    "vue-i18n": "^8.25.0",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "vuex-electron": "^1.0.0",
-    "moment": "^2.29.1"
+    "vuex-electron": "^1.0.0"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
